Work around issue in Qt5 that shortcut override events are posted twice

Make shortcut override handling not have side effects.

Task-number: QTBUG-30164
Change-Id: Ie54a31fc6539d4e509b0903983df0effa06cee12
Reviewed-by: Daniel Teske <daniel.teske@digia.com>